test: expand ConversationReaderTest with countTurns, loadTurnEntries, loadAdjacentTurnIds
Adds 7 new test methods covering previously untested ConversationReader methods:
- countTurns: zero for missing session, correct count, session isolation
- loadTurnEntries: empty for missing turn, returns prompt+events,
  includes context files, isolates between turns
- loadAdjacentTurnIds: empty for missing ref, later turns, earlier turns,
  respects limit, session isolation, empty when none adjacent

Also fixes pre-existing warnings (Clean As You Code):
- Replace all get(0) → getFirst() calls
- Replace assertTrue(x instanceof Y) → assertInstanceOf(Y.class, x)
- Add missing assertInstanceOf static import

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>